--- a/package.json
+++ b/package.json
@@ -10,14 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "ngrok": "^5.0.0-beta.2",
-    "node-telegram-bot-api": "^0.66.0",
-    "pusher": "^5.2.0",
-    "pusher-js": "^8.4.0-rc2",
-    "socket.io-client": "^4.7.5"
+    "node-telegram-bot-api": "^0.66.0"
   },
   "pkg": {
     "assets": [
